
option java_outer_classname="GetGroupCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message GetGroupCommand {
	optional int64 requestId = 1;
	optional string group = 2;
	optional string subGroup = 3;
	optional bool getGroupKeys = 4;
}